--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
 		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.19.6",
+		"@babel/preset-env": "^7.19.4",
+		"@typescript-eslint/eslint-plugin": "^5.40.1",
+		"@typescript-eslint/parser": "^5.40.1",
+		"babel-loader": "^8.2.5",
+		"eslint": "^8.25.0",
+		"ts-loader": "^9.4.1",
+		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
-		"webpack-cli": "^4.10.0"
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.11.1"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack --mode production",
+		"start": "webpack serve --mode development --open --hot"
 	},
 	"author": "",
 	"license": "ISC"
