--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
 		"babel-loader": "^8.2.5",
+		"css-loader": "^6.7.1",
 		"eslint": "^8.25.0",
+		"postcss": "^8.4.18",
+		"postcss-loader": "^7.0.1",
+		"postcss-preset-env": "^7.8.2",
+		"style-loader": "^3.3.1",
+		"tailwindcss": "^3.2.0",
 		"ts-loader": "^9.4.1",
 		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
