--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"private": true,
 	"dependencies": {
+		"gl-matrix": "^3.4.3",
 		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
